fix about page on mobile

--- a/src/components/AboutPageNew/AboutPageNew.scss
+++ b/src/components/AboutPageNew/AboutPageNew.scss
@@ -1,11 +1,31 @@
 @import "../../styles/app.scss";
 
+.AboutPage__mobile {
+  -webkit-animation: fadein $transition-duration-long;
+  -moz-animation: fadein $transition-duration-long;
+  -ms-animation: fadein $transition-duration-long;
+  -o-animation: fadein $transition-duration-long;
+  animation: fadein $transition-duration-long;
+
+  display: none;
+    
+  @media (max-width: 40rem) {
+    display: block;
+  }
+}
+
 .AboutPageNew {
   -webkit-animation: fadein $transition-duration-long;
   -moz-animation: fadein $transition-duration-long;
   -ms-animation: fadein $transition-duration-long;
   -o-animation: fadein $transition-duration-long;
   animation: fadein $transition-duration-long;
+
+  display: none;
+
+  @media (min-width: 40.01rem) {
+    display: block;
+  }
 
   cursor: none;
   overflow: hidden;
